Commit Code by Jhalak on 21/1/2016

--- a/bundle/en-us/constant.properties
+++ b/bundle/en-us/constant.properties
@@ -24,3 +24,5 @@ multiplefile.duplicate	= This file has already been selected:\n$file
 multiplefile.toomuch	= The files selected exceed the maximum size permited ($size)
 multiplefile.toomany	= Too many files selected (max: $max)
 multiplefile.toobig		= $file is too big (max $size)
+
+errormsg.config_error	= There are some configuration error. Please try again.
