--- a/file/form_configuration.json
+++ b/file/form_configuration.json
@@ -8,14 +8,14 @@
 				 "labelKey":"containerInventory.containerNumber",
                "multiLevel":[  
                   {  
-                     "validation":"r",
+                     "validation":"required",
                      "tabIndex":"1",
                      "name":"containerNumber",
                      "defaultValue":"",
                      "type":"text"
                   },
                   {  
-                    "validation":"r",
+                   "validation":"required",
 				   "tabIndex":"6",
 				   "name":"shippingStatus",
 				   "labelKey":"containerInventory.shippingStatus",
@@ -34,7 +34,7 @@
                ]
             },
             {  
-               "validation":"r,n",
+               "validation":"required",
                "tabIndex":"2",
                "name":"containerCycle",
                "labelKey":"containerInventory.containerCycle",
@@ -42,7 +42,7 @@
                "type":"text"
             },
             {  
-               "validation":"r,e",
+               "validation":"required,email",
                "tabIndex":"3",
                "name":"email",
                "labelKey":"containerInventory.email",
@@ -50,7 +50,7 @@
                "type":"text"
             },
             {  
-               "validation":"r,n",
+               "validation":"required",
                "tabIndex":"4",
                "name":"vgm",
                "labelKey":"containerInventory.vgm",
@@ -59,7 +59,6 @@
             },
             {  
                "cols":"5",
-               "validation":"",
                "tabIndex":"5",
                "name":"address",
                "labelKey":"containerInventory.address",
@@ -68,7 +67,7 @@
                "rows":"10"
             },
             {  
-               "validation":"r",
+               "validation":"required",
                "tabIndex":"6",
                "name":"shippingStatus",
                "labelKey":"containerInventory.shippingStatus",
@@ -85,7 +84,7 @@
                "type":"dropdown"
             },
             {  
-               "validation":"r",
+               "validation":"required",
                "tabIndex":"7",
                "name":"containerStatus",
                "labelKey":"containerInventory.containerStatus",
@@ -103,7 +102,7 @@
                "type":"radio"
             },
             {  
-               "validation":"r",
+               "validation":"required",
                "tabIndex":"8",
                "name":"daysOfGP",
                "labelKey":"containerInventory.daysOfGP",
@@ -124,7 +123,7 @@
                "type":"checkbox"
             },
             {  
-               "validation":"r",
+               "validation":"required",
                "tabIndex":"9",
                "name":"vgmMeasuredDate",
                "labelKey":"containerInventory.vgmMeasuredDate",
@@ -135,7 +134,7 @@
                "type":"text"
             },
             {  
-               "validation":"r",
+               "validation":"required",
                "tabIndex":"10",
                "name":"containerImage",
                "labelKey":"containerInventory.containerImage",
@@ -147,7 +146,7 @@
                "multiple":"true"
             },
 			{  
-               "validation":"r",
+               "validation":"required",
                "tabIndex":"11",
                "name":"damageImage",
                "labelKey":"containerInventory.containerImage",
